# AccessLogic

./: accesslogic.proto
AccessLogicServiceClient/: AccessLogicServiceClient.hpp  accesslogic.pb.h
accesslogic/: AccessLogicMgr.cpp  AccessLogicMgr.hpp  AccessLogicServiceImpl.cpp  AccessLogicServiceImpl.hpp  AccessLogicServiceImplInstance.cpp  CMakeLists.txt  dylib.cpp  server.conf  testclient.cpp
accesslogic/AccessLogicServiceClient/: AccessLogicServiceClient.cpp  CMakeLists.txt  accesslogic.grpc.pb.h  accesslogic.pb.cc
accesslogic/Comm/: fileutils.cpp  fileutils.hpp  md5.cpp  md5.hpp
accesslogic/Handler/: HelloHandler.cpp  HelloHandler.hpp
accesslogic/MetaDataMaster/: FileSystem.cpp  FileSystem.hpp  filesystem.cpp  filesystem.hpp  main.cpp  system
accesslogic/Proto/: accesslogic.grpc.pb.cc
